remake all, but now as it should, dto edition mostly